Repaired scrollbar size

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,7 @@
 
 ::-webkit-scrollbar {
   width: 0.6rem;
+  height: 0.6rem;
   border-radius: 0.5rem;
 }
 .light ::-webkit-scrollbar {
